crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__collapsed_80x10.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
▸ request          ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
                   ■cpu:30% ■io:45% ■mem:15% ■gc:5% ■net:5%
