crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__deep_20x6.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
▾ req… ╺━━━━━━━━━━━╸
       ■cpu:30%
  ▾ d… ╺━━━╸
       ╺╸
       ━
       ━
