crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__filtered-git_after_50x15.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Command Palette ───────────────────────────────┐
│> git                                           │
│────────────────────────────────────────────────│
│> Git: Commit                             Ctrl+G│
│  Git: Push                                     │
│  Git: Pull                                     │
│  Git: Branch                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│[Root]                                          │
└────────────────────────────────────────────────┘
