crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__focused-leaf_80x10.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
⋯▸ logging         ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
