crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__initial_30x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
 ████████
 ████████
 ████████
   Plan      Code     Review
