crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__insert-to-normal_after_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
assertion_line: 198
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:NORMAL pending:- cursor:4                  │
│hello                                           │
└────────────────────────────────────────────────┘
