crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__long-label_40x1.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
⠸ Processing very long task name...
