crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__long-labels_80x18.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---





                       ┌Selector────────────────────────┐
                       │                      ████████  │
                       │                      ████████  │
                       │                      ████████  │
                       │                      ████████  │
                       │ Discovery Implement…Verificat… │
                       │                                │
                       └────────────────────────────────┘
