crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__normal-mode_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:NORMAL pending:- cursor:10                 │
│hello world                                     │
└────────────────────────────────────────────────┘
